fix viz overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,3 +486,8 @@ textarea {
   font-size: 16px;
   float: right;
 }
+
+#dendrogram {
+  margin-top: 100px;
+  margin-left: 500px;
+}
